--- a/views/admin/eventHistory.ejs
+++ b/views/admin/eventHistory.ejs
@@ -45,83 +45,42 @@
 
 									
 									<tbody>
+										<% eventHistoryData.forEach((event, index) => { %>
 										<tr>
-											<td>1</td>
-                                            <td>
+											<td><%= index + 1 %></td>
+											<td>
 												<div class="product-img bg-transparent border">
-													<img src="assets/images/icons/laptop.png" width="35" alt="">
+													<img src="<%= event.images[0] %>" width="35" alt="Event Image">
 												</div>
 											</td>
-											<td> Digital Marketing Summit 2023</td>
-											<td>15/03/2023</td>
-											<td>Madiwala</td>
-                                            <td>Workshop</td>
-                                            <td>Building Effective Leadership Skills</td>
-                                            <td><a href="" class="btn btn-sm btn-light btn-block radius-30">Detail</a>
+											<td><%= event.mainHeading %></td>
+											<td><%= event.eventDate.toISOString().split('T')[0] %></td>
+											<td><%= event.location %></td>
+											<td><%= event.eventType %></td>
+											<td><%= event.subHeading %></td>
+											<td>
+												<button 
+													class="btn btn-sm btn-light btn-block radius-30 show-detail-btn"
+													data-short-description="<%= event.shortDescription %>"
+												>
+													Detail
+												</button>
 											</td>
-											<td><a href="" class="btn btn-sm btn-light btn-block radius-30">Active</a>
+											<td>
+												<a href="/admin/editEventHistoryStatus/<%= event._id %>?status=<%= event.status %>" 
+												   class="btn btn-sm btn-light btn-block radius-30">
+													<%= event.status ? 'Active' : 'Inactive' %>
+												</a>
 											</td>
-											<td><a href="" class="btn btn-sm btn-light btn-block radius-30">Edit</a>
-											</td>
-										</tr>
-										<tr>
-											<td>2</td>
-                                            <td>
-												<div class="product-img bg-transparent border">
-													<img src="assets/images/icons/laptop.png" width="35" alt="">
-												</div>
-											</td>
-											<td>Creative Branding and Advertising Expo</td>
-											<td>22/09/2023</td>
-											<td>HSR Layout</td>
-											<td>Expo</td>
-											<td>Innovative Approaches to Modern Advertising</td>
-                                            <td><a href="" class="btn btn-sm btn-light btn-block radius-30">Detail</a>
-											</td>
-											<td><a href="" class="btn btn-sm btn-light btn-block radius-30">Inactive</a>
-											</td>
-											<td><a href="" class="btn btn-sm btn-light btn-block radius-30">Edit</a>
+											<td>
+												<a href="/admin/editEventHistory/<%= event._id %>" class="btn btn-sm btn-light btn-block radius-30">
+													Edit
+												</a>
 											</td>
 										</tr>
-										<tr>
-											<td>3</td>
-                                            <td>
-												<div class="product-img bg-transparent border">
-													<img src="assets/images/icons/laptop.png" width="35" alt="">
-												</div>
-											</td>
-											<td>Global Tech Innovators Conference</td>
-											<td>05/12/2023</td>
-											<td>Indiranagar</td>
-											<td>Conference</td>
-											<td>The Future of Technology and Innovation</td>
-                                            <td><a href="" class="btn btn-sm btn-light btn-block radius-30">Detail</a>
-											</td>
-											<td><a href="" class="btn btn-sm btn-light btn-block radius-30">Complete</a>
-											</td>
-											<td><a href="" class="btn btn-sm btn-light btn-block radius-30">Edit</a>
-											</td>
-										</tr>
-										<tr>
-											<td>4</td>
-                                            <td>
-												<div class="product-img bg-transparent border">
-													<img src="assets/images/icons/laptop.png" width="35" alt="">
-												</div>
-											</td>
-											<td> Leadership Workshop: Inspiring Teams</td>
-											<td>22/09/2023</td>
-											<td>Electronic City</td>
-											<td>Expo</td>
-											<td>Innovative Approaches to Modern Advertising</td>
-                                            <td><a href="" class="btn btn-sm btn-light btn-block radius-30">Detail</a>
-											</td>
-											<td><a href="" class="btn btn-sm btn-light btn-block radius-30">Complete</a>
-											</td>
-											<td><a href="" class="btn btn-sm btn-light btn-block radius-30">Edit</a>
-											</td>
-										</tr>
+										<% }); %>
 									</tbody>
+									
 								</table>
 							</div>
 						</div>
@@ -174,6 +133,19 @@
 	</div> -->
 	<!--end switcher-->
 	<!-- JavaScript -->
+	<script>
+		document.addEventListener("DOMContentLoaded", function () {
+			const detailButtons = document.querySelectorAll(".show-detail-btn");
+	
+			detailButtons.forEach(button => {
+				button.addEventListener("click", function () {
+					const shortDescription = this.getAttribute("data-short-description");
+					alert(shortDescription); // Display the shortDescription in an alert box
+				});
+			});
+		});
+	</script>
+	
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
