--- a/views/admin/head.ejs
+++ b/views/admin/head.ejs
@@ -9,17 +9,17 @@
 	<!--favicon-->
 	<!-- <link rel="icon" href="assets/images/favicon-32x32.png" type="image/png" /> -->
 
-	<link href="assets/plugins/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+	<link href="assets/plugins/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" type="text/css"/>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" type="text/css">
 	<!--plugins-->
-	<link href="assets/plugins/simplebar/css/simplebar.css" rel="stylesheet" />
-	<link href="assets/plugins/fullcalendar/css/main.min.css" rel="stylesheet" />
-	<link href="assets/plugins/fancy-file-uploader/fancy_fileupload.css" rel="stylesheet" />
-	<link href="assets/plugins/Drag-And-Drop/dist/imageuploadify.min.css" rel="stylesheet" />
-	<link href="assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
-	<link href="assets/plugins/metismenu/css/metisMenu.min.css" rel="stylesheet" />
+	<link href="assets/plugins/simplebar/css/simplebar.css" rel="stylesheet" type="text/css" />
+	<link href="assets/plugins/fullcalendar/css/main.min.css" rel="stylesheet" type="text/css" />
+	<link href="assets/plugins/fancy-file-uploader/fancy_fileupload.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/plugins/Drag-And-Drop/dist/imageuploadify.min.css" rel="stylesheet" type="text/css" />
+	<link href="assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/plugins/metismenu/css/metisMenu.min.css" rel="stylesheet" type="text/css"/>
 	<!-- loader-->
-	<link href="assets/css/pace.min.css" rel="stylesheet" />
+	<link href="assets/css/pace.min.css" rel="stylesheet"type="text/css" />
 	<script src="assets/js/pace.min.js"></script>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
