--- a/views/admin/head.ejs
+++ b/views/admin/head.ejs
@@ -40,7 +40,7 @@
 				<div class="sidebar-header">
 					
 					<div>
-						<h4 class="d-none d-lg-flex logo-text">Bē.</h4>
+						<h4 class="d-none d-lg-flex logo-text">BESTRACT</h4>
 					</div>
 					<a href="javascript:;" class="toggle-btn ml-lg-auto"> <i class="bx bx-menu"></i>
 					</a>
@@ -397,7 +397,7 @@
 			<div class="mobile-topbar-header">
 			
 				<div>
-					<h4 class="logo-text">Bē.</h4>
+					<h4 class="logo-text">BESTRACT</h4>
 				</div>
 				<a href="javascript:;" class="toggle-btn ml-auto"> <i class="bx bx-menu"></i>
 				</a>
@@ -442,11 +442,20 @@
 							<div class="menu-title">To Do</div>
 						</a>
 					</li>
+					<% if (false) { %>
+						<li>
+							<a class="" href="/admin/adminShow">
+								<div class="parent-icon"><i class='bx bx-briefcase-alt'></i>
+								</div>
+								<div class="menu-title">Employee Manage</div>
+							</a>
+						</li>
+					<% } %>
 					<li>
 						<a class="" href="/admin/adminLogin">
 							<div class="parent-icon"> <i class="bx bx-lock"></i>
 							</div>
-							<div class="menu-title">Login or Logout</div>
+							<div class="menu-title">Logout</div>
 						</a>
 						
 					</li>
