--- a/views/user/getHired.ejs
+++ b/views/user/getHired.ejs
@@ -7,7 +7,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">Bē.</a>
+                <a href="/" class="mil-logo">BESTRACT</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -113,7 +113,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">Bē.</a>
+                <a href="/" class="mil-logo">BESTRACT</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
