--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -122,7 +122,7 @@
         <div class="mil-frame">
             <div class="mil-frame-top">
                 <a href="/" class="mil-logo">
-                    <img class="logo-image " src="user/Images/Logo/logo_edited.png" alt="Logo">
+                    <img class="logo-image " src="user/Images/Low/44444.png" alt="Logo">
                 </a>
                 <div class="mil-menu-btn">
                     <span></span>
