--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -21,7 +21,7 @@
                 <div class="card-header border-bottom-0">
                     <div class="d-flex align-items-center">
                         <div>
-                            <h5 class="mb-0">Enquiry Details</h5>
+                            <h5 class="mb-0">Admin Details</h5>
                         </div>
                         <div class="ml-auto">
                             <a href="/admin/addAdmin" class="btn btn-light radius-15">Add a New Admin</a>
@@ -81,36 +81,7 @@
     </div>
     <!--end page-content-wrapper-->
 </div>
-<!--end page-wrapper-->
 
-<!-- Modal for More Detail -->
-<div class="modal fade" id="detailModal" tabindex="-1" role="dialog" aria-labelledby="detailModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="detailModalLabel">Enquiry Details</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p><strong>Customer Name:</strong> <span id="modalName"></span></p>
-                <p><strong>Phone Number:</strong> <span id="modalPhone"></span></p>
-				<p><strong>Email:</strong> <span id="modalEmail"></span></p>
-                <p><strong>Business Type:</strong> <span id="modalBusiness"></span></p>
-                <p><strong>Message:</strong> <span id="modalMessage"></span></p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- JavaScript -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/popper.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
 
 
 
