--- a/views/admin/adminError.ejs
+++ b/views/admin/adminError.ejs
@@ -22,25 +22,7 @@
 <body class="bg-theme bg-theme1">
 	<!-- wrapper -->
 	<div class="wrapper">
-		<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top border-bottom">
-			<a class="navbar-brand" href="javascript:;">
-				<img src="assets/images/logo-img.png" width="160" alt="">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">	<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">	<a class="nav-link" href="javascript:;">Home</a>
-					</li>
-					<li class="nav-item">	<a class="nav-link" href="javascript:;">About</a>
-					</li>
-					<li class="nav-item">	<a class="nav-link" href="javascript:;">Portfolio</a>
-					</li>
-					<li class="nav-item">	<a class="nav-link" href="javascript:;">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</nav> -->
+	
 		<div class="error-404 d-flex align-items-center justify-content-center">
 			<div class="container">
 				<div class="card radius-15 shadow-none bg-transparent">
@@ -52,7 +34,7 @@
 								<p>You have reached the edge of the universe.
 									<br>The page you requested could not be found.
 									<br>Dont'worry and return to the previous page.</p>
-								<div class="mt-5">	<a href="/admin" class="btn btn-lg btn-light px-md-5 radius-30">Go Home</a>
+								<div class="mt-5">	<a href="/admin/adminLogin" class="btn btn-lg btn-light px-md-5 radius-30">Go Home</a>
 									<!-- <a href="javascript:;" class="btn btn-lg btn-light ml-3 px-md-5 radius-30">Back</a> -->
 								</div>
 							</div>
