--- a/views/user/consulting2.ejs
+++ b/views/user/consulting2.ejs
@@ -9,7 +9,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">Bē.</a>
+                <a href="/" class="mil-logo">BESTRACT</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -111,7 +111,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">Bē.</a>
+                <a href="/" class="mil-logo">BESTRACT</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
