--- a/views/user/events.ejs
+++ b/views/user/events.ejs
@@ -6,7 +6,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">Bē.</a>
+                <a href="/" class="mil-logo">BESTRACT</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -109,7 +109,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">Bē.</a>
+                <a href="/" class="mil-logo">BESTRACT</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
