--- a/views/user/testimonial.ejs
+++ b/views/user/testimonial.ejs
@@ -17,7 +17,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">Bē.</a>
+                <a href="/" class="mil-logo">BESTRACT</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -122,7 +122,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">Bē.</a>
+                <a href="/" class="mil-logo">BESTRACT</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
